# batpy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.html  conduct.html  contributing.html  example_batpac.html  example_batpac2brightway.html  example_batpac2brightway_batpac2recycling_assessment_tool.html  example_batpac2brightway_multiple_batteries.html  example_batpac2brightway_single_battery.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example_batpac.doctree  example_batpac2brightway.doctree  example_batpac2brightway_batpac2recycling_assessment_tool.doctree  example_batpac2brightway_multiple_batteries.doctree  example_batpac2brightway_single_battery.doctree  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/batpy/: index.doctree
.doctrees/autoapi/batpy/batpac_battery/: index.doctree
.doctrees/autoapi/batpy/batpac_tool/: index.doctree
.doctrees/autoapi/batpy/batpy_workbook/: index.doctree
.doctrees/autoapi/batpy/brightway/: index.doctree
.doctrees/autoapi/batpy/data/: index.doctree
.doctrees/autoapi/batpy/datasets/: index.doctree
.doctrees/autoapi/batpy/formula_engine/: index.doctree
.doctrees/autoapi/batpy/recycling_assessment_tool/: index.doctree
.github/workflows/: ci-cd.yaml  ci.yaml  documentation.yaml
_sources/: example_batpac.ipynb.txt  example_batpac2brightway.ipynb.txt  example_batpac2brightway.md.txt  example_batpac2brightway_batpac2recycling_assessment_tool.ipynb.txt  example_batpac2brightway_single_battery.ipynb.txt  index.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/batpy/: index.rst.txt
autoapi/: index.html
autoapi/batpy/: index.html
autoapi/batpy/batpac_battery/: index.html
autoapi/batpy/batpac_tool/: index.html
autoapi/batpy/batpy_workbook/: index.html
autoapi/batpy/brightway/: index.html
autoapi/batpy/data/: index.html
autoapi/batpy/datasets/: index.html
autoapi/batpy/formula_engine/: index.html
autoapi/batpy/recycling_assessment_tool/: index.html
autoapi/batpy/utility_functions/: index.html
docs/: Makefile  conf.py  example.ipynb  example_batpac.html  example_batpac.ipynb  example_batpac.md  example_batpac2brightway.html  example_batpac2brightway.ipynb  example_batpac2brightway_multiple_batteries.ipynb  index.md  make.bat  requirements.txt
docs/example_data/: BatPaC_user_input_cells.toml  batpac_config.toml  batpy_batpac_additional_user_results.toml  batpy_batpac_battery_design.toml  batpy_batpac_calculation_and_validation_results.toml  batpy_batpac_config.toml  batpy_batpac_summary_of_results.toml  batpy_batpac_user_input_cells.toml  batteries_config.toml
docs/example_data/conf_batpac/: batpy_batteries_standard_config.toml
docs/example_data/conf_brightway/: batpy_batpac2brightway.toml  batpy_recycling_assessment_tool2brightway.toml
docs/example_data/excel_workbooks/: BatPaC.xlsm  RAT_base.xlsx  RAT_brightway_Output.xlsx  RAT_brightway_intermediate.xlsx  dummy_BatPaC.xlsx
src/batpy/: BatPaC_battery.py  BatPaC_tool.py  __init__.py  batpac_battery.py  batpac_brightway.py  batpac_datasets.py  batpac_tool.py  batpac_util.py  batpy.py  batpy_workbook.py  brightway.py  datasets.py  formula_engine.py  is_version_compatible.py  recycling_assessment_tool.py  utility_functions.py
src/batpy/data/: __init__.py
tests/: test_BatPaC_calculation_and_validation_results.toml  test_batpac_battery.py  test_batpac_datasets.py  test_batpac_tool.py  test_batpy.py  test_batteries_config.toml  test_datasets.py  test_formula_engine.py  test_function_is_version_compatible.py  test_utility_functions.py
tests/data/: batpy_test_data.py  batpy_test_data_batpac_tool.py  batpy_test_data_battery.py  test_batpac.xlsm  test_batpac2brightway_1.toml  test_batpac2brightway_2.toml  test_batpy_batpac2brightway.toml
tests/local/: test_batpac_tool.py  test_brightway.py
(+47 files in other folders)
