[tool.poetry]
name = "batpy"
version = "0.0.1"
description = "A python package to read, write and calculate batteries in the BatPaC tool."
authors = ["Raphael Ginster"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
