[tool.poetry]
name = "batpy"
version = "0.0.2"
description = "A python package to read, write, and calculate batteries in the BatPaC tool."
authors = ["Raphael Ginster <r.ginster@tu-braunschweig.de>"]
license = "MIT"
readme = "README.md"
documentation = "https://rginster.github.io/batpy/"
repository = "https://github.com/rginster/batpy"

[tool.poetry.dependencies]
python = "^3.9"
xlwings = "^0.30.4"
pathlib = "^1.0.1"
toml = "^0.10.2"
prettytable = "^3.7.0"
tqdm = "^4.65.0"
semantic-version = "^2.10.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
python-semantic-release = "^7.33.3"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.2", python = "^3.9"}
sphinx-autoapi = "^2.1.0"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"

[tool.semantic_release]
version_source = "tag"                      # version source
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default